// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engage > cart > components > CartItemGroupReservation should render accordion 1`] = `
<div
  data-testid="card-list-item"
>
  <div
    class="sg-1dqn7hy-addressDetails"
  >
    StoreOpeningHours
    012456789
  </div>
</div>
`;

exports[`engage > cart > components > CartItemGroupReservation should render accordion 2`] = `
<div
  class="sg-y23pzr-address"
>
  <div
    class="sg-xyhfks-addressIcon"
  >
    <div
      data-testid="location-icon"
    />
  </div>
  <div>
    <div
      font-weight="bold"
    >
      locations.method.ropis
    </div>
    <div>
      Location name
    </div>
  </div>
</div>
`;

exports[`engage > cart > components > CartItemGroupReservation should render only label 1`] = `
<div
  data-testid="card-list-item"
>
  <div
    class="sg-y23pzr-address"
  >
    <div
      class="sg-xyhfks-addressIcon"
    >
      <div
        data-testid="location-icon"
      />
    </div>
    <div>
      <div
        font-weight="bold"
      >
        locations.method.ropis
      </div>
      <div>
        Location name
      </div>
    </div>
  </div>
</div>
`;
